# RIDL

./: pyproject.toml
src/ridl/: __init__.py  __main__.py  cli.py
