[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "gemmi>=0.7.1",
    "cycler>=0.10.0",
    "future>=0.17.1",
    "kiwisolver>=1.0.1",
    "matplotlib>=3.6.3",
    "numpy>=1.22.4",
    "pandas>=1.3.5",
    "pyparsing>=2.4.7",
    "python-dateutil>=2.7.5",
    "pytz>=2020.5",
    "scipy>=1.7.3",
    "seaborn>=0.13.2",
    "six>=1.11.0"
] 
name = "ridl"
dynamic = ["version"]
description = "A program to calculate per-atom metrics to describe electron density change between complete diffraction datasets collected at successive doses."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8"
]
authors = [
    { name = "Charlie Bury", email = "csbury@me.com" },
    { name = "Elspeth Garman", email = "elspeth.garman@bioch.ox.ac.uk" }
]
maintainers = [
    { name = "Charlie Bury", email = "csbury@me.com" },
    { name = "Elspeth Garman", email = "elspeth.garman@bioch.ox.ac.uk" },
    { name = "Jon Agirre", email = "jon.agirre@york.ac.uk" }
]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_file = "src/ridl/_version.py"

[project.urls]
Homepage = "https://github.com/GarmanGroup/RIDL"
Issues = "https://github.com/GarmanGroup/RIDL/issues"

[tool.pytest.ini_options]
markers = []
